
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;
typedef scalar_t__ uint32 ;
typedef int STREAM ;
typedef int BOOL ;


 int False ;
 scalar_t__ SEC_EXPONENT_SIZE ;
 scalar_t__ SEC_MODULUS_SIZE ;
 int SEC_PADDING_SIZE ;
 scalar_t__ SEC_RSA_MAGIC ;
 int error (char*,scalar_t__) ;
 int in_uint32_le (int ,scalar_t__) ;
 int in_uint8p (int ,int *,scalar_t__) ;
 int in_uint8s (int ,int) ;
 int s_check (int ) ;

__attribute__((used)) static BOOL
sec_parse_public_key(STREAM s, uint8 ** modulus, uint8 ** exponent)
{
 uint32 magic, modulus_len;

 in_uint32_le(s, magic);
 if (magic != SEC_RSA_MAGIC)
 {
  error("RSA magic 0x%x\n", magic);
  return False;
 }

 in_uint32_le(s, modulus_len);
 if (modulus_len != SEC_MODULUS_SIZE + SEC_PADDING_SIZE)
 {
  error("modulus len 0x%x\n", modulus_len);
  return False;
 }

 in_uint8s(s, 8);
 in_uint8p(s, *exponent, SEC_EXPONENT_SIZE);
 in_uint8p(s, *modulus, SEC_MODULUS_SIZE);
 in_uint8s(s, SEC_PADDING_SIZE);

 return s_check(s);
}
