; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_sec_parse_public_key.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_sec_parse_public_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_RSA_MAGIC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"RSA magic 0x%x\0A\00", align 1
@False = common dso_local global i32 0, align 4
@SEC_MODULUS_SIZE = common dso_local global i64 0, align 8
@SEC_PADDING_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"modulus len 0x%x\0A\00", align 1
@SEC_EXPONENT_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32**, i32**)* @sec_parse_public_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sec_parse_public_key(i32 %0, i32** %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32** %1, i32*** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i64, i64* %8, align 8
  %12 = call i32 @in_uint32_le(i32 %10, i64 %11)
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* @SEC_RSA_MAGIC, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i64, i64* %8, align 8
  %18 = call i32 @error(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i64 %17)
  %19 = load i32, i32* @False, align 4
  store i32 %19, i32* %4, align 4
  br label %52

20:                                               ; preds = %3
  %21 = load i32, i32* %5, align 4
  %22 = load i64, i64* %9, align 8
  %23 = call i32 @in_uint32_le(i32 %21, i64 %22)
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* @SEC_MODULUS_SIZE, align 8
  %26 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %25, %27
  %29 = icmp ne i64 %24, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %20
  %31 = load i64, i64* %9, align 8
  %32 = call i32 @error(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i64 %31)
  %33 = load i32, i32* @False, align 4
  store i32 %33, i32* %4, align 4
  br label %52

34:                                               ; preds = %20
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @in_uint8s(i32 %35, i32 8)
  %37 = load i32, i32* %5, align 4
  %38 = load i32**, i32*** %7, align 8
  %39 = load i32*, i32** %38, align 8
  %40 = load i64, i64* @SEC_EXPONENT_SIZE, align 8
  %41 = call i32 @in_uint8p(i32 %37, i32* %39, i64 %40)
  %42 = load i32, i32* %5, align 4
  %43 = load i32**, i32*** %6, align 8
  %44 = load i32*, i32** %43, align 8
  %45 = load i64, i64* @SEC_MODULUS_SIZE, align 8
  %46 = call i32 @in_uint8p(i32 %42, i32* %44, i64 %45)
  %47 = load i32, i32* %5, align 4
  %48 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %49 = call i32 @in_uint8s(i32 %47, i32 %48)
  %50 = load i32, i32* %5, align 4
  %51 = call i32 @s_check(i32 %50)
  store i32 %51, i32* %4, align 4
  br label %52

52:                                               ; preds = %34, %30, %16
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32 @in_uint32_le(i32, i64) #1

declare dso_local i32 @error(i8*, i64) #1

declare dso_local i32 @in_uint8s(i32, i32) #1

declare dso_local i32 @in_uint8p(i32, i32*, i64) #1

declare dso_local i32 @s_check(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
